<resources>
    <string name="app_name">Visit Sofia</string>

    <string name="welcome">Welcome to Sofia</string>
    <string name="transport">Transport</string>
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="night_life">Night Life</string>
    <string name="to_visit">Places to visit</string>
    <string name="it_works">It works</string>
    <string name="select_option">Please select an option</string>
    <string name="empty_string">The string is empty</string>

    <string name="text_list_view">Company</string>
    <string name="text_list_view_2">Hotel</string>
    <string name="text_list_view_3">Club</string>
    <string name="text_list_view_phone">Phone</string>
    <string name="text_list_view_4">Restaurant</string>
    <string name="text_list_view_5">Location</string>
    <string name="club_music_style">Style:" "</string>
    <string name="select_browser">Select browser:</string>
    <string name="price">Price</string>
    <string name="rating">Rating</string>
    <string name="visited">Visited\t</string>
    <string name="visited_times">\ttimes</string>
    <string name="visits">Visits</string>

    <string name="fragment_tourism">Tourism</string>
    <string name="fragment_cultural">Cultural</string>
    <string name="fragment_sight">Sights</string>
    <string name="fragment_phrases">BG Assist</string>
    <string name="visit_transport">Visit Sofia transport</string>

    <string-array name="transport_options">
        <item>Select an option</item>
        <item>Air Travel</item>
        <item>Land Travel</item>
    </string-array>

    <string-array name="air_companies">
        <item>Bulgaria Air</item>
        <item>+359 24020400</item>
        <item>BH Air</item>
        <item>+359 2981018</item>
        <item>Wizz Air</item>
        <item>090063059</item>
        <item>Ryanair</item>
        <item>1520444004</item>
        <item>Air France</item>
        <item>+359 29358230</item>
        <item>Lufthansa</item>
        <item>+359 2935 8210</item>
        <item>Alitalia</item>
        <item>+359 29802212</item>
        <item>Qatar Airways</item>
        <item>+359 29373465</item>
        <item>Thomson Airways</item>
        <item>+44 01582640036</item>
        <item>British Airways</item>
        <item>+359 29547000</item>
        <item>Turkish Airways</item>
        <item>+359 29474006</item>
        <item>EL AL Israel Airlines</item>
        <item>+359 298724432</item>
        <item>flyDubai</item>
        <item>+359 29815091</item>
    </string-array>

    <string-array name="land_travel_companies">
        <item>Trans 5</item>
        <item>+359 29366768</item>
        <item>Rally 13</item>
        <item>+359 29870025</item>
        <item>Karat S AD</item>
        <item>+359 28120812</item>
        <item>Ecolines</item>
        <item>+359 29311860</item>
        <item>Air Kona</item>
        <item>+359 29711111</item>
        <item>Union Ivkoni</item>
        <item>+359 879356311</item>
        <item>ARDA-TUR</item>
        <item>+359 28133233</item>
        <item>Elit 54 Ltd.</item>
        <item>+359 888510675</item>
        <item>BioMet</item>
        <item>+359 28688892</item>
        <item>BDZ-Trains</item>
        <item>0700 10 200</item>
        <item>Central Bus Station</item>
        <item>0900 21000</item>
    </string-array>

    <string-array name="hotel_array">
        <item>Best Western Europe</item>
        <item>02 9701500</item>
        <item>Hotel Zenith</item>
        <item>02 9862203</item>
        <item>Central Park Hotel</item>
        <item>02 8058181</item>
        <item>Gloria Palace</item>
        <item>02 9807895</item>
        <item>Radisson Blu Grand</item>
        <item>02 9334334</item>
        <item>Best Western Plus</item>
        <item>0 29804445</item>
        <item>Holiday Inn</item>
        <item>02 8070707</item>
    </string-array>

    <string-array name="hotel_stars">
        <item>4 stars</item>
        <item>3 stars</item>
        <item>4 stars</item>
        <item>4 stars</item>
        <item>4.5 stars</item>
        <item>4 stars</item>
        <item>5 stars</item>
    </string-array>

    <string-array name="resto_array">
        <item>Spaghetti Kitchen</item>
        <item>089 056 6666</item>
        <item>Godzilla restaurant</item>
        <item>0700 16 010</item>
        <item>Checkpoint Charly</item>
        <item>02 988 0370</item>
        <item>Talents Restaurant</item>
        <item>02 421 9068</item>
        <item>Pavilion 37</item>
        <item>087 737 0137</item>
        <item>Golden Nero</item>
        <item>089 849 0885</item>
        <item>Kotiloto</item>
        <item> 02 967 2220</item>
    </string-array>

    <string-array name="resto_links">
        <item>http://spaghetti-kitchen.com/</item>
        <item>http://godzila.bg/</item>
        <item>http://checkpointcharlybg.com/c/en/menu/</item>
        <item>http://restauranttalents.bg/</item>
        <item>https://facebook.com/Pavillion37/</item>
        <item>http://goldennero.com/</item>
        <item>http://kotiloto.com</item>
    </string-array>

    <string-array name="club_array">
        <item>Studio 5</item>
        <item>0 29631254</item>
        <item>STIX Bar and Billiards</item>
        <item>088 2882082</item>
        <item>By the Way</item>
        <item>0 298038364</item>
        <item>Mascara</item>
        <item>088 8113355</item>
        <item>Grape Central</item>
        <item>088 9820444</item>
        <item>Skaptobara</item>
        <item>087 7333233</item>
        <item>KANAAL</item>
        <item>088 2856346</item>
        <item>Bedroom Premium</item>
        <item>088 8860666</item>
        <item>:PM</item>
        <item>089 8670600</item>
        <item>Yalta</item>
        <item>089 7870230</item>
    </string-array>

    <string-array name="club_style">
        <item>Social club</item>
        <item>Bar and Billiards</item>
        <item>Cocktail bar</item>
        <item>Irish Restaurant</item>
        <item>Wine Bar</item>
        <item>Bar</item>
        <item>Bar</item>
        <item>House music</item>
        <item>House music</item>
        <item>Disco music</item>
    </string-array>

    <string name="transport_text">
        As Sofia is the capital city of Bulgaria, it can be accessed fairly easy by air or land. International travelers can access the city by air via Sofia International Airport, which is located at the outskirts of the city.
        As an international airport, it server quite substantial number of airlines, most of which have offices near the airport. From there, additional transportation can be easily arranged via taxi, bus or metro to other important
        transport hubs in the city - Central Train Station and Central Bus Station. From there, you can obtain intercity transport and visit the beautiful Bulgarian province via bus or a train. To obtain more information on travel
        agencies, which serve the citys visitors via air or land, select the corresponding section - air or land.\nTo obtain further information on the city transport system like buses, trolleybuses, tramways and such - click on the button bellow and visit the website of the community transport company, responsible for providing transport
        services in the city.
    </string>

    <string-array name="tourism_locations">
        <item>Rila Monastery</item>
        <item>59.95</item>
        <item>Boyana Church</item>
        <item>36.77</item>
        <item>Vitosha Mountain</item>
        <item>50.00</item>
        <item>Ledenika Caves</item>
        <item>80.00</item>
        <item>Sofia Full-Day Tour</item>
        <item>40.00</item>
        <item>Trip to Beograd</item>
        <item>120.00</item>
        <item>Sofia Food Tasting</item>
        <item>90.00</item>
        <item>Visit Seven Rila Lakes</item>
        <item>120.00</item>
        <item>Sofia Evening Tour</item>
        <item>Free</item>
        <item>Plovdiv wine tasting</item>
        <item>80.00</item>
        <item>Trip to Nis</item>
        <item>60.00</item>
    </string-array>

    <string-array name="sightseeing_location">
        <item>Alexandar Nevski cath.</item>
        <item>1</item>
        <item>Vitosha Montain</item>
        <item>2</item>
        <item>Saint Nikolas church</item>
        <item>3</item>
        <item>Boyana church</item>
        <item>4</item>
        <item>365 culture tour</item>
        <item>5</item>
        <item>Sofia Communist tour</item>
        <item>6</item>
        <item>Sofia Graffiti tour</item>
        <item>7</item>
        <item>Buzludzha tour</item>
        <item>8</item>
        <item>Sofia walks</item>
        <item>9</item>
        <item>Palace of Culture</item>
        <item>10</item>
        <item>National Assembly</item>
        <item>11</item>
        <item>Academy of Science</item>
        <item>12</item>
    </string-array>

    <string-array name="museum_location">
        <item>Archeology Museum</item>
        <item>Museum of History</item>
        <item>Museum of Mil. History</item>
        <item>Museum of Socialist Art</item>
        <item>Museum of Natural History</item>
        <item>Sofia History Museum</item>
        <item>National Art Gallery</item>
        <item>Ethnographic Institute</item>
        <item>Sofia City Art Gallery</item>
        <item>Earth and Man Museum</item>
        <item>Polytechnical Museum</item>
        <item>Anthropol. Museum</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
