<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context="io.github.timladenov.visitsofia.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/main_menu_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_80"
                android:layout_alignParentTop="true"
                android:alpha="0.3"
                android:background="@android:color/black"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_80"
                android:layout_alignParentTop="true"
                android:alpha="1"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/welcome"
                android:textColor="@android:color/white"
                android:textSize="@dimen/titleTextSize" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_30"
                        android:background="@drawable/button_border_white">

                        <TextView
                            android:id="@+id/transport"
                            style="@style/TextButtonStyle"
                            android:text="@string/transport"
                            android:textAlignment="center" />
                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_30"
                        android:background="@drawable/button_border_white">

                        <TextView
                            android:id="@+id/hotels"
                            style="@style/TextButtonStyle"
                            android:text="@string/hotels"
                            android:textAlignment="center" />
                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_30"
                        android:background="@drawable/button_border_white">

                        <TextView
                            android:id="@+id/restaurants"
                            style="@style/TextButtonStyle"
                            android:text="@string/restaurants"
                            android:textAlignment="center" />
                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_30"
                        android:background="@drawable/button_border_white">

                        <TextView
                            android:id="@+id/nightlife"
                            style="@style/TextButtonStyle"
                            android:text="@string/night_life"
                            android:textAlignment="center" />
                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_30"
                        android:layout_marginTop="@dimen/margin_30"
                        android:background="@drawable/button_border_white">

                        <TextView
                            android:id="@+id/place_to_visit"
                            style="@style/TextButtonStyle"
                            android:text="@string/to_visit"
                            android:textAlignment="center" />
                    </FrameLayout>
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>

    </LinearLayout>

</FrameLayout>
